Updated tailwind colours scheme, and added button components

--- a/assets/scss/colours.scss
+++ b/assets/scss/colours.scss
@@ -22,7 +22,11 @@ $color-complement-2: #6F5A40;
 $color-complement-3: #EB8911;
 $color-complement-4: #FF8C00;
 
-$color-off-white: #eee;
+$gray-100: #101010;
 
-$primary-gradient: linear-gradient(90deg, #28546E 0%, #442F76 100%);
+
+$color-off-white: #e0e0e0;
+$color-off-white: #ffffff;
+
+$primary-gradient: linear-gradient(90deg, #196795 0%, #3F23A1 100%);
 $secondary-gradient: linear-gradient(90deg, #FF8C00 0%, #AC7839 100%);
