--- a/assets/scss/colours.scss
+++ b/assets/scss/colours.scss
@@ -1,32 +1,35 @@
-$color-primary-0: #28546E;	/* Main Primary color */
-$color-primary-1: #1A1D1F;
-$color-primary-2: #2B3C47;
-$color-primary-3: #136596;
-$color-primary-4: #0685D0;
+$color-primary-100: #73A7C6;	/* Main Primary color */
+$color-primary-200: #3C7BA0;
+$color-primary-300: #196795;
+$color-primary-400: #0A4A6F;
+$color-primary-500: #03304B;
 
-$color-secondary-1-0: #442F76;	/* Main Secondary color (1) */
-$color-secondary-1-1: #1E1D22;
-$color-secondary-1-2: #38304C;
-$color-secondary-1-3: #421CA1;
-$color-secondary-1-4: #460BD6;
+$color-secondary-100: #8F7DCE;	/* Main Secondary color (1) */
+$color-secondary-200: #5E47AD;
+$color-secondary-300: #3F23A1;
+$color-secondary-400: #291278;
+$color-secondary-500: #170751;
 
-$color-secondary-2-0: #AC9B39;	/* Main Secondary color (2) */
-$color-secondary-2-1: #313029;
-$color-secondary-2-2: #6F6840;
-$color-secondary-2-3: #EBCA11;
-$color-secondary-2-4: #FFD900;
+$color-tertiary-100: #95E680;	/* Main Secondary color (2) */
+$color-tertiary-200: #64D447;
+$color-tertiary-300: #3BC417;
+$color-tertiary-400: #239305;
+$color-tertiary-500: #156300;
 
-$color-complement-0: #AC7839;	/* Main Complement color */
-$color-complement-1: #312D29;
-$color-complement-2: #6F5A40;
-$color-complement-3: #EB8911;
-$color-complement-4: #FF8C00;
+$color-complement-100: #FFCC8E;	/* Main Complement color */
+$color-complement-200: #FBB054;
+$color-complement-300: #E98D1B;
+$color-complement-400: #AF6306;
+$color-complement-500: #764100;
 
-$gray-100: #101010;
+$color-gray-100: #DDDDEE;
+$color-gray-200: #BBBBCC;
+$color-gray-300: #9999AA;
+$color-gray-400: #777788;
+$color-gray-500: #555566;
 
 
 $color-off-white: #e0e0e0;
-$color-off-white: #ffffff;
 
 $primary-gradient: linear-gradient(90deg, #196795 0%, #3F23A1 100%);
-$secondary-gradient: linear-gradient(90deg, #FF8C00 0%, #AC7839 100%);
+$secondary-gradient: linear-gradient(90deg, #FBB054 0%, #AF6306 100%);
