--- a/assets/scss/colours.scss
+++ b/assets/scss/colours.scss
@@ -32,4 +32,5 @@ $color-gray-500: #555566;
 $color-off-white: #e0e0e0;
 
 $primary-gradient: linear-gradient(90deg, #196795 10%, #3F23A1 90%);
-$secondary-gradient: linear-gradient(90deg, #FBB054 10%, #AF6306 90%);
+$secondary-gradient: linear-gradient(90deg, #291278 10%, #5E47AD 90%);
+$complementary-gradient: linear-gradient(90deg, #FBB054 10%, #AF6306 90%);
