--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -268,3 +268,11 @@ input:checked + .slider:before {
 .small-description {
   overflow-y: hidden;
 }
+
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .25s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
