--- a/assets/scss/colours.scss
+++ b/assets/scss/colours.scss
@@ -33,4 +33,4 @@ $color-off-white: #e0e0e0;
 
 $primary-gradient: linear-gradient(90deg, #196795 10%, #3F23A1 90%);
 $secondary-gradient: linear-gradient(90deg, #291278 10%, #5E47AD 90%);
-$complementary-gradient: linear-gradient(90deg, #FBB054 10%, #AF6306 90%);
+$complementary-gradient: linear-gradient(90deg, #E98D1B 10%, #AF6306 90%);
